# drf-mock-response_demo

./: .gitignore  .pre-commit-config.yaml  README.md  manage.py  pyproject.toml
drfmockresponse_demo/: asgi.py  settings.py  urls.py  wsgi.py
